--- a/manajemen-stock-app/frontend/index.html
+++ b/manajemen-stock-app/frontend/index.html
@@ -1,10 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/database-management.ico" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Sistem Manajemen Stock - Kelola inventori, transaksi, dan laporan dengan mudah" />
+    <meta name="keywords" content="manajemen stock, inventori, transaksi, laporan, gudang" />
+    <meta name="author" content="Manajemen Stock App" />
+    <meta name="theme-color" content="#3b82f6" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Manajemen Stock" />
+    <title>Manajemen Stock</title>
   </head>
   <body>
     <div id="root"></div>
